--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+anyio==4.11.0
 blis==1.3.0
 catalogue==2.0.10
 certifi==2025.10.5
@@ -8,6 +9,10 @@ cloudpathlib==0.23.0
 confection==0.1.5
 cymem==2.0.11
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+exceptiongroup==1.3.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 jericho==3.3.0
 Jinja2==3.1.6
@@ -19,6 +24,7 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 murmurhash==1.0.13
 numpy==2.0.2
+ollama==0.6.0
 packaging==25.0
 preshed==3.0.10
 pydantic==2.12.3
@@ -28,6 +34,7 @@ requests==2.32.5
 rich==14.2.0
 shellingham==1.5.4
 smart_open==7.4.3
+sniffio==1.3.1
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
